fixed mobile alignment

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ html, body {
     display: flex;
     flex-direction: column;
 
-    justify-content: center;
+    justify-content: top;
     align-items: center;
 }
 
@@ -49,7 +49,6 @@ html, body {
 
 .intro {
     border-color: rgba(255, 0, 102, 1);
-    border-color: blue;
 }
 
 .contact {
